--- a/Components/SliderPosts/_style.scss
+++ b/Components/SliderPosts/_style.scss
@@ -6,7 +6,7 @@
 
     &--logos {
       align-items: center;
-      margin-top: $component-spacing-mobile;
+      margin-top: 6rem;
 
       @media (min-width: $breakpoint-tablet) {
         margin-top: $component-spacing-tablet;
