--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -335,6 +335,10 @@ button {
   transition: background-color 0.2s ease, border-color 0.2s ease, color 0.2s ease;
   user-select: none;
 
+  @media (max-width: $breakpoint-tablet) {
+    margin-top: 2rem;
+  }
+
   &:disabled,
   &--disabled {
     border-color: $color-contrast;
